308875 - Filtering search results (#24)
* feat: Header & Footer fixes

* Addressed PR Comments

* 260719 - Installed dotenv and confiugred environment variables.

* 260719 - Improved the environment config & implemented the test cases

* 260719 - Improved environment varaibles configuratio, implemented unit test cases for both environment variables and geoNetworkClient

* 260719 - Implemented a logic to retrieve the secret keys from the given azure key vault

* 260719 - Implemented test case for azure key vault client and reading the secrets with mocking

* 260719 - Changing the tags to header and article and adding ARIA roles. Also fixing the full width banner size in large screens

* 294755 - Implemented a plugin to share data across different routes

* 294755 - Added decorators to benefit from TypeScript typings

* 294755 - Update the plugin login to correct the type definitions and fix the issue while reading the data

* 294755 - Renamed the SearchController

* 260719 - Fixing the test case issues

* 260719 - Fixing the test cases

* 29475 - Implemented the Search API integration with search term and date range query

* 294755 - Fixing the failed test case

* 294755 - Fixing the sonar issues

* 294755 - Added test cases to improve the coverage

* 294755 - Exposed new method to reset the shared data

* 294755 - Refactoring the search api and results response

* 294755 - Implemented new and fixed failed test cases

* 294755 - using the optional chain express

* 260719 - Updated the readme.md file with environment variables information

* 294755 - Added new test cases and fixed failed test cases

* 294755 - Fixing the test cases

* feat: Date Questionnaire

* guided search for date questionnaire

* Schema validation

* 294755 - recfactored the logic for reusability and manintainability

* 294755 - Reverting the pipeline changes and small change in the tsconfig.json file

* 294755 - Adding the test cases


--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7537,6 +7537,10 @@
   font-weight: 700;
   line-height: 30px;
   text-decoration-line: underline;
+  color: #1d70b8 !important;
+}
+.count-block-link:visited {
+  color: #4c2c92 !important;
 }
 
 .overlay {
@@ -7576,6 +7580,10 @@
 .app-main-class {
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.govuk-breadcrumbs__list .govuk-breadcrumbs__list-item:last-child a {
+  text-decoration: none;
 }
 
 .full-width-banner {
@@ -7823,7 +7831,7 @@
 
 .option-container {
   display: grid;
-  grid-template-columns: 0.8fr 1.4fr;
+  grid-template-columns: 0.9fr 1.4fr;
   gap: 10px;
 }
 .option-group {
@@ -7842,6 +7850,7 @@
   font-style: normal;
   font-weight: 300;
   line-height: 25px;
+  margin-right: 10px;
   display: inline-block;
 }
 .option-items {
@@ -7853,22 +7862,76 @@
   width: 80px;
 }
 
+#results-block {
+  margin-top: 50px;
+}
+
+.data-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-row-gap: 30px;
+}
+.data-container__heading-l {
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  color: #ffffff;
+}
+.data-container__body-l {
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px;
+  color: #ffffff;
+}
+.data-container__button-group {
+  justify-content: center;
+}
+
+.filter-heading {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+}
+.filter-options-label {
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 25px;
+}
+.filter-button {
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 25px;
+  display: block;
+}
+.filter-reset {
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 25px;
+  color: #008938 !important;
+}
+
 .govuk-pagination {
   margin-top: 20px;
 }
 
 .govuk-pagination__item--current {
-  background-color: #00703C;
+  background-color: #00703c;
 }
 
 .govuk-link:link {
-  color: #00703C;
+  color: #00703c;
 }
 
 .govuk-link:visited {
-  color: #00703C;
+  color: #00703c;
 }
 
 .govuk-pagination__item--current:hover {
-  background-color: #00703C;
+  background-color: #00703c;
 }
