--- a/src/assets/sass/components/_results_count.scss
+++ b/src/assets/sass/components/_results_count.scss
@@ -6,6 +6,11 @@
     &-link {
       @include font-style-stack(24px, 30px);
       text-decoration-line: underline;
+      color: $govuk-link-colour !important;
+    }
+
+    &-link:visited {
+      color: $govuk-link-visited-colour !important;
     }
   }
 }
