--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -1,4 +1,4 @@
-{% extends "layout/template.njk" %}
+{% extends "layout/default.njk" %}
 
 {% from "partials/quick_search/macro.njk" import quickSearch %}
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
@@ -10,7 +10,7 @@
     items: [
       {
         text: "Home",
-        href: homePageUrl,
+        href: routes.homePage,
         attributes: {
           'data-do-storage-reset': ''
         }
@@ -22,21 +22,20 @@
     ]
   }) }}
 {% endblock %}
+
 {% block content %}
 
   {{ quickSearch({
     isResultPage: true,
-    quickSearchPath: quickSearchPath,
+    searchPath: routes.searchResults,
     formId: formId,
     searchInputError : searchInputError
   }) }}
 
   {%if searchInputError === undefined %}
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-one-third">
-        <p>&nbsp;</p>
-      </div>
-      <div class="govuk-grid-column-two-thirds" id="results-block" data-action="{{getResultsPath}}" data-fetch-results>
+      <div class="govuk-grid-column-one-third" id="filter-block" data-action="{{routes.getFilters}}" data-fetch-filters>&nbsp;</div>
+      <div class="govuk-grid-column-two-thirds" id="results-block" data-action="{{routes.getResults}}" data-fetch-results>
         <p class="govuk-caption-m govuk-!-font-size-14">Your search request is being served...</p>
       </div>
     </div>
