311821 - Access more information by opening the general tab (#25)
* 311821 - Fixing the coordinates elastisearch query issue

* 311821 - Encrypting the document URL with ID and Index

* 311821 - initial set of changes with API, unit test case and default tab view

* 311821 - Fixing the tab content with macro

* 311821 - Fixing the open data with message when disabled and unit test cases

* 311821 - Fixing the study period date string and the related test cases

* 311821 - Fixing the failed test cases

* 311821 - Refactored the code to display value with different options

* 311821 - Fixing the sonar issues and added one more test case

* 311821 - Fixed review comments and refactored the code

* 311821 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the review comments

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7935,3 +7935,72 @@
 .govuk-pagination__item--current:hover {
   background-color: #00703c;
 }
+
+.details-title {
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  width: 630px;
+}
+
+.govuk-tabs__list-item .govuk-tabs__tab {
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 19px;
+  color: #0b0c0c;
+}
+
+.tab-content-container {
+  display: grid;
+  gap: 15px;
+}
+.tab-content-row {
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+.tab-content-label {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  width: 170px;
+  text-align: left;
+  vertical-align: top;
+  color: #000;
+  margin: 0;
+}
+.tab-content-value {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 20px;
+  color: #0b0c0c;
+  text-align: left;
+}
+.tab-content-value__not-provided {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 1px;
+  width: 130px;
+  padding: 5px 1px 5px 5px;
+  margin: 0;
+}
+
+.open-data-block--disabled {
+  padding-left: 15px;
+  border-left: 5px solid #d4351c;
+  margin-bottom: 25px;
+}
+.open-data-block--tag {
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25px;
+  color: #d4351c;
+  display: block;
+}
