--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -92,7 +92,7 @@
         </p>
 
         <div class='govuk-button-group search-result__button-group'>
-          {{ openData({ resourceLocator: item.resourceLocator, isDetailsPage: false }) }}
+          {{ openData({ organisationName: item.organisationName, resourceLocator: item.resourceLocator, isDetailsPage: false }) }}
 
           {{ govukButton({
             text: 'More info',
