--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -45,7 +45,7 @@
     <h1 class='govuk-heading-m details-title'>{{docDetails.title}}</h1>
 
     <div {% if not docDetails.resourceLocator %} class="open-data-block--disabled" {% endif %}>
-      {{ openData({ resourceLocator: docDetails.resourceLocator, isDetailsPage: true }) }}
+      {{ openData({ organisationName: docDetails.organisationName, resourceLocator: docDetails.resourceLocator, isDetailsPage: true }) }}
       {% if not docDetails.resourceLocator %}
         <span class="open-data-block--tag">Access to this data resource is by application to the owner - please refer to access tab for further details</span>
       {% endif %}
