337310 - Toggle object in hero section for alt title (#31)
* 311821 - Fixing the coordinates elastisearch query issue

* 311821 - Encrypting the document URL with ID and Index

* 311821 - initial set of changes with API, unit test case and default tab view

* 311821 - Fixing the tab content with macro

* 311821 - Fixing the open data with message when disabled and unit test cases

* 311821 - Fixing the study period date string and the related test cases

* 311821 - Fixing the failed test cases

* 311821 - Refactored the code to display value with different options

* 311821 - Fixing the sonar issues and added one more test case

* 335172 - Fixing the change in the AC

* 335172 - Design fix

* 311821 - Fixed review comments and refactored the code

* 335172 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the review comments

* 335172 - Merged with the latest code

* 337310 - Added the Alternate Title property but the response property still unknown(WIP)

* 337310 - Added unit test cases with TODO comment, need to update this later

* 335172 - Change in fetching the organisation details

* 335172 - Updated the code to display the organisation name on the results and modal based on the rolset

* 335172 - Fixed failed test cases

* 335172 - Implementing the PR review comments

--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -1,5 +1,6 @@
 {% extends 'layout/default.njk' %}
 
+{% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from 'govuk/components/breadcrumbs/macro.njk' import govukBreadcrumbs %}
 {% from 'govuk/components/tabs/macro.njk' import govukTabs %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
@@ -43,6 +44,15 @@
     {% set accessHtml = details({options: detailsTabOptions.access, hasData: docDetails.title}) %}
     {% set governanceHtml = details({options: detailsTabOptions.governance, hasData: docDetails.title}) %}
     <h1 class='govuk-heading-m details-title'>{{docDetails.title}}</h1>
+
+    {% if docDetails !== undefined and docDetails.alternateTitle %}
+      {{ govukDetails({
+        summaryText: "Alternate title (additional business name or alternative language)",
+        text: docDetails.alternateTitle,
+        open: "true",
+        classes: "details-alt_title"
+      }) }}
+    {% endif %}
 
     <div {% if not docDetails.resourceLocator %} class="open-data-block--disabled" {% endif %}>
       {{ openData({ organisationName: docDetails.organisationName, resourceLocator: docDetails.resourceLocator, isDetailsPage: true }) }}
