--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -43,6 +43,7 @@
     {% set generalHTML = details({options: detailsTabOptions.general, hasData: docDetails.title}) %}
     {% set accessHtml = details({options: detailsTabOptions.access, hasData: docDetails.title}) %}
     {% set governanceHtml = details({options: detailsTabOptions.governance, hasData: docDetails.title}) %}
+    {% set licenseHtml = details({options: detailsTabOptions.license, hasData: docDetails.title}) %}
     <h1 class='govuk-heading-m details-title'>{{docDetails.title}}</h1>
 
     {% if docDetails !== undefined and docDetails.alternateTitle %}
@@ -109,7 +110,7 @@
         label: 'License',
         id: 'license',
         panel: {
-          html: plicenseHtml
+          html: licenseHtml
         }
       }
     ]
