337232 - Access more information by opening the Quality tab (#34)
* 311821 - Fixing the coordinates elastisearch query issue

* 311821 - Encrypting the document URL with ID and Index

* 311821 - initial set of changes with API, unit test case and default tab view

* 311821 - Fixing the tab content with macro

* 311821 - Fixing the open data with message when disabled and unit test cases

* 311821 - Fixing the study period date string and the related test cases

* 311821 - Fixing the failed test cases

* 311821 - Refactored the code to display value with different options

* 311821 - Fixing the sonar issues and added one more test case

* 335172 - Fixing the change in the AC

* 335172 - Design fix

* 311821 - Fixed review comments and refactored the code

* 335172 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the review comments

* 335172 - Merged with the latest code

* 337310 - Added the Alternate Title property but the response property still unknown(WIP)

* 337310 - Added unit test cases with TODO comment, need to update this later

* 335172 - Change in fetching the organisation details

* 335172 - Updated the code to display the organisation name on the results and modal based on the rolset

* 335172 - Fixed failed test cases

* 337232 - Implemented the Quality tab content (WIP)

* 337232 - Implemented the conformity field table structure

* 337232 - Fixing the sonnar issue with optinal chain expression

* 335172 - Implementing the PR review comments

* 337232 - Updating the test cases for Additional information field under qualty tab

* 337232 - Addressing the PR review comments

* 337232 - Removed the console statement

* 337232 - Fallback value for each field

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -8012,3 +8012,28 @@
   color: #d4351c;
   display: block;
 }
+
+.toggle-content__link {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 20px;
+  color: #1d70b8 !important;
+}
+
+.details-table {
+  border-collapse: collapse;
+}
+.details-table th,
+.details-table td {
+  padding: 8px 0;
+  text-align: left;
+  vertical-align: top;
+}
+.details-table th {
+  padding-top: 0;
+}
+.details-table thead tr,
+.details-table tbody tr {
+  border-bottom: 1px solid #b1b4b6;
+}
