--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -42,8 +42,10 @@
   {% if docDetails !== undefined and docDetails.title %}
     {% set generalHTML = details({options: detailsTabOptions.general, hasData: docDetails.title}) %}
     {% set accessHtml = details({options: detailsTabOptions.access, hasData: docDetails.title}) %}
+    {% set qualityHtml = details({options: detailsTabOptions.quality, hasData: docDetails.title}) %}
     {% set governanceHtml = details({options: detailsTabOptions.governance, hasData: docDetails.title}) %}
     {% set licenseHtml = details({options: detailsTabOptions.license, hasData: docDetails.title}) %}
+
     <h1 class='govuk-heading-m details-title'>{{docDetails.title}}</h1>
 
     {% if docDetails !== undefined and docDetails.alternateTitle %}
@@ -128,4 +130,5 @@
 {% block bodyEnd %}
   {{ super() }}
   <script type="module" src="{{ assetPath }}/scripts/dataModal.js"></script>
+  <script type="module" src="{{ assetPath }}/scripts/details.js"></script>
 {% endblock %}
