--- a/src/views/partials/go_to_resource/template.njk
+++ b/src/views/partials/go_to_resource/template.njk
@@ -15,4 +15,4 @@
   {% set openDataAttributes = openDataAttributes | merge({disabled: "true"}) %}
 {% endif %}
 
-{{ govukButton({ text: 'Open data', attributes: openDataAttributes, classes: buttonClasses }) }}
+{{ govukButton({ text: 'Go to resource', attributes: openDataAttributes, classes: buttonClasses }) }}
