338041 - Access more information by opening the geography tab (#39)
* 311821 - Fixing the coordinates elastisearch query issue

* 311821 - Encrypting the document URL with ID and Index

* 311821 - initial set of changes with API, unit test case and default tab view

* 311821 - Fixing the tab content with macro

* 311821 - Fixing the open data with message when disabled and unit test cases

* 311821 - Fixing the study period date string and the related test cases

* 311821 - Fixing the failed test cases

* 311821 - Refactored the code to display value with different options

* 311821 - Fixing the sonar issues and added one more test case

* 335172 - Fixing the change in the AC

* 335172 - Design fix

* 311821 - Fixed review comments and refactored the code

* 335172 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the rowsPerPage value to numeric

* 311821 - Fixing the review comments

* 335172 - Merged with the latest code

* 337310 - Added the Alternate Title property but the response property still unknown(WIP)

* 337310 - Added unit test cases with TODO comment, need to update this later

* 335172 - Change in fetching the organisation details

* 335172 - Updated the code to display the organisation name on the results and modal based on the rolset

* 335172 - Fixed failed test cases

* 337232 - Implemented the Quality tab content (WIP)

* 337232 - Implemented the conformity field table structure

* 337232 - Fixing the sonnar issue with optinal chain expression

* 335172 - Implementing the PR review comments

* 337232 - Updating the test cases for Additional information field under qualty tab

* 338401 - Intitial set of changes (WIP)

* 338041 - Fixing the Geography tab data

* 338041 - Removing the unnecessary code

* 338041 - Fixing the sonar cloud redundant issue

* 338041 - Removing the unncessary code

* 338041 - Fixing the typo issue and test cases

* 338041 - Addressed review commen

--- a/src/views/partials/details/template.njk
+++ b/src/views/partials/details/template.njk
@@ -5,7 +5,7 @@
     {% for option in params.options %}
       {% if option.label %}
         <div class='tab-content-row'>
-          <h2 class='tab-content-label'>{{option.label}}</h2>
+          <h2 class='tab-content-label'>{{option.label | safe }}</h2>
           {% if option.displayValue %}
             <span class='tab-content-value'>
               {{option.displayValue | safe}}
